[package]
name = "easycontract"
version = "0.1.0"
authors = ["adriamb <adria@iden3.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.8.0"
rustc-hex = "2.0.1"
secp256k1 = "0.12.0"
ethereum-tx-sign = "2.0.0"
primitive-types = "0.6.1"
log = "0.4.8"
rand = "0.6.5"
tiny-keccak = "1.5.0"
ethabi = "8.0.0"
zeroize = "1.0.0"
serde = "1.0.102"
futures = "0.1.29"