[package]
name = "ewre"
version = "0.1.0"
authors = ["adriamb <adria@iden3.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.8.0"
easycontract = { git = "https://github.com/adria0/ethworkshop-rustfest" }
rustc-hex = "2.0.1"

[[bin]]
name = "ewre"
path = "src/main.rs"